# research-lab

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
crates/rlab-cli/: Cargo.toml  askama.toml
crates/rlab-cli/src/: app.rs  lib.rs  logger.rs  main.rs
crates/rlab-cli/src/commands/: adapters.rs  artifact.rs  baselines.rs  benchmark.rs  cache.rs  check.rs  ci.rs  clean.rs  compare.rs  config.rs  data.rs  discover.rs  doctor.rs  errors.rs  evaluate.rs  exec.rs  explain.rs  freeze.rs  gc.rs  graph.rs  handoff.rs  impact.rs  init.rs  invalidate.rs  jobs.rs  journal.rs  lint.rs  migrate.rs  mod.rs  modules.rs  notes.rs  open.rs  plan.rs  report.rs  run.rs  runs.rs  search.rs  stats.rs  storage.rs  study.rs  (+4 more)
crates/rlab-cli/src/host/: execution.rs  mod.rs  process.rs  transport.rs
crates/rlab-cli/src/render/: human.rs  json.rs
crates/rlab-cli/src/ui/: mod.rs  routes.rs  server.rs  templates.rs  views.rs
crates/rlab-cli/src/ui/static/: app.css  app.js
crates/rlab-cli/src/ui/templates/: artifact.html  artifacts.html  compare.html  error.html  layout.html  report.html  reports.html  run.html  runs.html  sections.html
crates/rlab-core/: Cargo.toml
crates/rlab-core/src/: clean.rs  lib.rs  testing.rs
crates/rlab-core/src/adapters/: inventory.rs  mod.rs  model.rs  validation.rs
crates/rlab-core/src/artifact/: describe.rs  digest.rs  gc.rs  index.rs  manifest.rs  mod.rs  promote.rs  resolve.rs  store.rs
crates/rlab-core/src/baselines/: mod.rs  store.rs
crates/rlab-core/src/benchmarks/: mod.rs  model.rs
crates/rlab-core/src/budget/: estimate.rs  mod.rs
crates/rlab-core/src/cache/: mod.rs  service.rs
crates/rlab-core/src/ci/: checks.rs  mod.rs
crates/rlab-core/src/compare/: metrics.rs  mod.rs  runs.rs
crates/rlab-core/src/config/: discovery.rs  env.rs  mod.rs  model.rs  overrides.rs  paths.rs  validate.rs
crates/rlab-core/src/config/documents/: diff.rs  load.rs  merge.rs  mod.rs  model.rs  overrides.rs
crates/rlab-core/src/config/load/: apply.rs  env.rs  infer.rs  lab_toml.rs  mod.rs  overrides.rs  pyproject.rs  service.rs  toml.rs
crates/rlab-core/src/config/validate/: effective.rs  lab_toml.rs  mod.rs  names.rs  strings.rs
crates/rlab-core/src/data/: decisions.rs  documents.rs  materialize.rs  mod.rs  model.rs
crates/rlab-core/src/diagnostic/: doctor.rs  finding.rs  mod.rs  render.rs
crates/rlab-core/src/error/: kind.rs  mod.rs  safe.rs
crates/rlab-core/src/errors/: mod.rs  render.rs
crates/rlab-core/src/evaluations/: baseline.rs  mod.rs  model.rs
crates/rlab-core/src/exec/: mod.rs  request.rs  service.rs
crates/rlab-core/src/experiments/: matrix.rs  mod.rs  model.rs  planner.rs  record.rs  retry.rs
crates/rlab-core/src/fs/: atomic.rs  lock.rs  mod.rs  path.rs  safety.rs
crates/rlab-core/src/governance/: license.rs  mod.rs  pii.rs  policy.rs  secrets.rs
crates/rlab-core/src/graph/: lineage.rs  mod.rs
crates/rlab-core/src/host/: build.rs  event.rs  mod.rs  protocol.rs  request.rs  response.rs  validate.rs
crates/rlab-core/src/jobs/: mod.rs  store.rs
crates/rlab-core/src/journal/: append.rs  decisions.rs  ideas.rs  mod.rs  negatives.rs  notes.rs
crates/rlab-core/src/lineage/: graph.rs  mod.rs
crates/rlab-core/src/lint/: conventions.rs  mod.rs
crates/rlab-core/src/manifest/: artifact.rs  mod.rs  run.rs  schema.rs
crates/rlab-core/src/migrate/: mod.rs  plan.rs  registry.rs  runs.rs  schema.rs  service.rs
crates/rlab-core/src/modules/: doctor.rs  mod.rs  model.rs
crates/rlab-core/src/output/: json.rs  mod.rs  table.rs
crates/rlab-core/src/plan/: cost.rs  mod.rs  power.rs
crates/rlab-core/src/registry/: conflict.rs  declaration.rs  mod.rs  name.rs  record.rs  schema.rs  validate.rs
crates/rlab-core/src/reports/: compare.rs  handoff.rs  markdown.rs  mod.rs  run.rs
crates/rlab-core/src/reproducibility/: capture.rs  command.rs  env.rs  git.rs  lockfile.rs  mod.rs
crates/rlab-core/src/result/: artifact.rs  bundle.rs  metric.rs  mod.rs
crates/rlab-core/src/run/: directory.rs  event.rs  id.rs  lifecycle.rs  lock.rs  mod.rs  query.rs  state.rs  storage.rs  store.rs
crates/rlab-core/src/search/: index.rs  mod.rs  query.rs
crates/rlab-core/src/stats/: descriptive.rs  hypothesis.rs  mod.rs
crates/rlab-core/src/strict/: mod.rs  policy.rs  production.rs
crates/rlab-core/src/study/: mod.rs  model.rs  registry.rs  service.rs
crates/rlab-core/src/table/: mod.rs  render.rs
crates/rlab-core/src/template/: init.rs  mod.rs  skeleton.rs
crates/rlab-core/src/units/: mod.rs  registry.rs
crates/rlab-core/src/workflows/: mod.rs  model.rs  planner.rs
crates/rlab-py/: Cargo.toml
crates/rlab-py/src/: error.rs  lib.rs  module.rs  py_artifact.rs  py_baselines.rs  py_budget.rs  py_cache.rs  py_checkpoint.rs  py_cli.rs  py_components.rs  py_config.rs  py_data.rs  py_external.rs  py_governance.rs  py_jobs.rs  py_journal.rs  py_lineage.rs  py_project.rs  py_registry.rs  py_reports.rs  py_result.rs  py_run.rs  py_stats.rs  py_strict.rs  py_testing.rs  py_units.rs
crates/rlab-py/src/convert/: json.rs  mod.rs  path.rs  py_error.rs
docs/: README.md  SUMMARY.md  api-reference.md  architecture.md  artifacts.md  benchmarks.md  cli.md  concepts.md  configuration.md  data.md  evaluations.md  experiments.md  governance.md  installation.md  journal-search-baselines.md  packaging.md  project-layout.md  python-api.md  quickstart.md  registry.md  reproducibility.md  runner-protocol.md  runs.md  (+3 more)
(+476 files in other folders)
