[project]
name = "rlab"
version = "0.1.0"
description = "Declarative, local-first research runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.16",
]

[project.scripts]
rlab = "rlab.cli.app:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rlab*"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "types-pyyaml>=6.0",
]

[project.optional-dependencies]
hydra = ["hydra-core>=1.3"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]
hf = [
    "transformers>=4.44",
    "datasets>=2.20",
    "torch>=2.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "SIM", "PL"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"rlab/cli/**/*.py" = ["B008", "PLR0913"]
"tests/**/*.py" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=rlab --cov-branch --cov-fail-under=95 --cov-report=term-missing"

[tool.coverage.run]
omit = ["rlab/__main__.py"]
