[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rlab"
version = "0.1.0"
description = "Rust-first local research runtime with Python ergonomics"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Miguel Cardenas" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
]

[project.scripts]
rlab = "rlab.__main__:main"

[tool.maturin]
manifest-path = "crates/rlab-py/Cargo.toml"
module-name = "rlab._rlab"
python-source = "python"
include = [
  { path = "python/rlab/templates/**/*", format = "wheel" },
  { path = "python/rlab/_rlab.pyi", format = "wheel" },
  { path = "python/rlab/py.typed", format = "wheel" },
]
features = ["pyo3/extension-module"]
