[package]
name = "rlab-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
askama.workspace = true
base64.workspace = true
clap.workspace = true
ctrlc.workspace = true
indicatif.workspace = true
rlab-core = { path = "../rlab-core" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tiny_http.workspace = true
