[package]
name = "rlab-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true
hex.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
walkdir.workspace = true
wait-timeout.workspace = true
zip.workspace = true
