[package]
name = "rlab-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_rlab"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
rlab-core = { path = "../rlab-core" }
rlab-cli = { path = "../rlab-cli" }
serde.workspace = true
serde_json.workspace = true
